kubernetes/infrastructure/network/dns/adguard/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: adguard
  namespace: dns
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard
  strategy:
    blueGreen:
      # activeService specifies the service to update with the new template hash at time of promotion.
      activeService: adguard
      # promote new ReplicaSet as soon as completely ready/available
      autoPromotionEnabled: true
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard
    spec:
      containers:
        - name: adguard
          image: docker.io/adguard/adguardhome:v0.107.52 # renovate: docker=docker.io/adguard/adguardhome
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dhcp
              containerPort: 67
              protocol: UDP
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          startupProbe:
            exec:
              command: ["nslookup", "google.com", "127.0.0.1"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: combined-config
              mountPath: /opt/adguardhome/conf
            - name: work-folder
              mountPath: /opt/adguardhome/work
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-folder
          projected:
            sources:
              - configMap:
                  name: adguard-config
              - secret:
                  name: adguard-users
        - name: combined-config
          emptyDir: {}
        - name: work-folder
          emptyDir: {}
