kubernetes/infrastructure/network/dns/adguard/service-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-sts
  namespace: dns
  annotations:
    io.cilium/lb-ipam-ips: 192.168.178.197
    tailscale.com/expose: "true"
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dchp
      port: 67
      protocol: UDP
  selector:
    app: adguard-sts
