kubernetes/infrastructure/network/dns/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: dns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/common-name: adguard.costanza.cloud
    gethomepage.dev/description: DNS-based Adblocker
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: DNS
    gethomepage.dev/icon: adguard-home.png
    gethomepage.dev/name: AdGuardHome

spec:
  ingressClassName: cilium
  rules:
    - host: adguard.costanza.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
  tls:
    - hosts:
        - adguard.costanza.cloud
      secretName: adguard-tls
